--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
       text-align: center;
       padding: 20px;
     }
-    input, button {
+    input, button, select {
       padding: 10px;
       margin: 5px;
       font-size: 16px;
+    }
+    select {
+      background: #333;
+      color: #fff;
+      border: 1px solid #555;
     }
     #result {
       margin-top: 20px;
@@ -22,10 +27,21 @@
       color: #ffcc00;
       white-space: pre-line;
     }
+    .casino-selector {
+      margin-bottom: 15px;
+    }
   </style>
 </head>
 <body>
   <h1>Mines Multiplier Calculator</h1>
+
+  <div class="casino-selector">
+    <label for="casino">Casino:</label>
+    <select id="casino">
+      <option value="stake">Stake</option>
+      <option value="jacks">Jacks</option>
+    </select>
+  </div>
 
   <label for="mines">Mines (1–24):</label>
   <input type="number" id="mines" min="1" max="24"><br>
@@ -41,7 +57,7 @@
   <div id="result"></div>
 
   <script>
-    const chart = [
+    const stakeChart = [
       [1.01, 1.08, 1.12, 1.18, 1.24, 1.3, 1.37, 1.46, 1.55, 1.65, 1.77, 1.9, 2.06, 2.25, 2.47, 2.75, 3.09, 3.54, 4.12, 4.95, 6.19, 8.25, 12.3, 24.7],
       [1.08, 1.17, 1.12, 1.24, 1.56, 1.74, 1.94, 2.18, 2.47, 2.83, 3.26, 3.81, 4.5, 5.4, 6.6, 8.25, 10.61, 14.14, 19.8, 29.7, 49.5, 99, 2.97, null],
       [1.12, 1.29, 1.29, 1.56, 2.01, 2.35, 2.79, 3.35, 4.07, 5.0, 6.26, 7.96, 10.35, 13.8, 18.7, 27.11, 40.66, 65.06, 113.85, 227.7, 569.25, 2277, null, null],
@@ -68,7 +84,34 @@
       [24.75, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]
     ];
 
+    const jacksChart = [
+      [1.02, 1.06, 1.11, 1.17, 1.23, 1.3, 1.38, 1.47, 1.56, 1.67, 1.8, 1.96, 2.13, 2.35, 2.61, 2.94, 3.36, 3.92, 4.7, 5.88, 7.84, 11.76, 23.52],
+      [1.06, 1.17, 1.28, 1.42, 1.58, 1.76, 1.98, 2.25, 2.57, 2.97, 3.46, 4.09, 4.91, 6.01, 7.51, 9.66, 12.87, 18.03, 27.04, 45.08, 90.16, 270.48, null],
+      [1.11, 1.28, 1.49, 1.73, 2.04, 2.43, 2.91, 3.54, 4.35, 5.44, 6.93, 9.01, 12.02, 16.52, 23.61, 35.41, 56.67, 99.17, 198.35, 495.88, 1983.52, null, null],
+      [1.17, 1.42, 1.73, 2.14, 2.68, 3.4, 4.37, 5.72, 7.62, 10.4, 14.56, 21.03, 31.55, 49.58, 82.64, 148.76, 297.52, 694.23, 2082.69, 10413.48, null, null, null],
+      [1.23, 1.58, 2.04, 2.68, 3.58, 4.86, 6.73, 9.53, 13.87, 20.8, 32.36, 52.59, 90.16, 165.29, 330.58, 743.82, 1983.52, 6942.32, 41653.92, null, null, null, null],
+      [1.3, 1.76, 2.43, 3.4, 4.86, 7.1, 10.65, 16.47, 26.35, 43.92, 76.86, 142.75, 285.5, 628.11, 1570.28, 4710.86, 18843.44, 131904.08, null, null, null, null, null],
+      [1.38, 1.98, 2.91, 4.37, 6.73, 10.65, 17.44, 29.64, 52.7, 98.82, 197.65, 428.26, 1027.82, 2826.51, 9421.72, 42397.74, 339181.92, null, null, null, null, null, null],
+      [1.47, 2.25, 3.54, 5.72, 9.53, 16.47, 29.64, 56, 112, 240.01, 560.03, 1456.08, 4368.25, 16016.92, 80084.62, 720761.58, null, null, null, null, null, null, null],
+      [1.56, 2.57, 4.35, 7.62, 13.87, 26.35, 52.7, 112, 256.01, 640.03, 1792.1, 5824.38, 23297.34, 128135.39, 1281353.92, null, null, null, null, null, null, null, null],
+      [1.67, 2.97, 5.44, 10.4, 20.8, 43.92, 98.82, 240.01, 640.03, 1920.11, 6720.38, 29121.68, 174730.08, 1922030.88, null, null, null, null, null, null, null, null, null],
+      [1.8, 3.46, 6.93, 14.56, 32.36, 76.86, 197.65, 560.03, 1792.1, 6720.38, 31361.8, 203851.76, 2446221.12, null, null, null, null, null, null, null, null, null, null],
+      [1.96, 4.09, 9.01, 21.03, 52.59, 142.75, 428.26, 1456.08, 5824.33, 29121.68, 203851.76, 2650072.88, null, null, null, null, null, null, null, null, null, null, null],
+      [2.13, 4.91, 12.02, 31.55, 90.16, 285.5, 1027.82, 4368.25, 23297.34, 174730.08, 2446221.12, null, null, null, null, null, null, null, null, null, null, null, null],
+      [2.35, 6.01, 16.52, 49.58, 165.29, 628.11, 2826.51, 16016.92, 128135.39, 1922030.88, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [2.61, 7.51, 23.61, 82.64, 330.58, 1570.28, 9421.72, 80084.62, 1281353.92, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [2.94, 9.66, 35.41, 148.76, 743.82, 4710.86, 42397.74, 720761.58, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [3.36, 12.87, 56.67, 297.52, 1983.52, 18843.44, 339181.92, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [3.92, 18.03, 99.17, 694.23, 6942.32, 131904.08, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [4.7, 27.04, 198.35, 2082.69, 41653.92, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [5.88, 45.08, 495.88, 10413.48, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [7.84, 90.16, 1983.52, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [11.76, 270.48, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null],
+      [23.52, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null]
+    ];
+
     function calculate() {
+      const casino = document.getElementById("casino").value;
       const mines = parseInt(document.getElementById("mines").value);
       const tiles = parseInt(document.getElementById("tiles").value);
       const bet = parseFloat(document.getElementById("bet").value);
@@ -83,11 +126,21 @@
         return;
       }
 
-      const multiplier = chart[mines - 1][tiles - 1];
+      // Select the appropriate chart based on casino
+      const chart = casino === "stake" ? stakeChart : jacksChart;
+      
+      // Handle different chart sizes (Jacks chart has 23 columns vs Stake's 24)
+      let multiplier;
+      if (casino === "jacks" && tiles === 24) {
+        multiplier = null; // Jacks chart doesn't have column 24
+      } else {
+        const colIndex = casino === "jacks" && tiles > 23 ? 22 : tiles - 1;
+        multiplier = chart[mines - 1] && chart[mines - 1][colIndex];
+      }
 
       if (multiplier) {
         const payout = (bet * multiplier).toFixed(8);
-        result.innerText = `Multiplier: ${multiplier}x\nTotal Return: ${payout}`;
+        result.innerText = `Casino: ${casino.charAt(0).toUpperCase() + casino.slice(1)}\nMultiplier: ${multiplier}x\nTotal Return: ${payout}`;
       } else {
         result.innerText = "Multiplier not available for this combination.";
       }
@@ -95,4 +148,3 @@
   </script>
 </body>
 </html>
-
